
option java_outer_classname="RemoveGroupCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message RemoveGroupCommand {
	optional int64 requestId = 1;
	optional string group = 2;
	optional string subGroup = 3;
}